Prepare Tinkerboard&MiQi for RetroPie image

--- a/config/sources/rockchip.conf
+++ b/config/sources/rockchip.conf
@@ -15,7 +15,7 @@ SERIALCON=ttyS2
 
 case $BRANCH in
 	default)
-	KERNELSOURCE='https://github.com/rockchip-linux/kernel.git'
+	KERNELSOURCE='https://github.com/S802-LE/kernel.git'
 	KERNELBRANCH='branch:release-4.4'
 	KERNELDIR='linux-rockchip'
 
