Update kernel and config

--- a/config/kernel/linux-rockchip-default.config
+++ b/config/kernel/linux-rockchip-default.config
@@ -2461,9 +2461,7 @@ CONFIG_DRM_DW_HDMI_I2S_AUDIO=y
 # CONFIG_POWERVR_ROGUE_M is not set
 # CONFIG_MALI400 is not set
 CONFIG_MALI_DEVFREQ=y
-CONFIG_MALI_MIDGARD_FOR_ANDROID=y
-# CONFIG_MALI_MIDGARD_FOR_LINUX is not set
-CONFIG_MALI_MIDGARD=m
+CONFIG_MALI_MIDGARD=y
 # CONFIG_MALI_GATOR_SUPPORT is not set
 # CONFIG_MALI_MIDGARD_ENABLE_TRACE is not set
 # CONFIG_MALI_DMA_FENCE is not set
