--- a/config/kernel/linux-rockchip-default.config
+++ b/config/kernel/linux-rockchip-default.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 4.4.126 Kernel Configuration
+# Linux/arm 4.4.139 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
@@ -94,10 +94,7 @@ CONFIG_TICK_CPU_ACCOUNTING=y
 # CONFIG_IRQ_TIME_ACCOUNTING is not set
 # CONFIG_SCHED_WALT is not set
 # CONFIG_BSD_PROCESS_ACCT is not set
-CONFIG_TASKSTATS=y
-CONFIG_TASK_DELAY_ACCT=y
-CONFIG_TASK_XACCT=y
-CONFIG_TASK_IO_ACCOUNTING=y
+# CONFIG_TASKSTATS is not set
 
 #
 # RCU Subsystem
@@ -569,6 +566,7 @@ CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_GOV_COMMON=y
 CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_STAT_DETAILS is not set
+CONFIG_CPU_FREQ_TIMES=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
@@ -774,31 +772,26 @@ CONFIG_NETFILTER_XTABLES=m
 #
 # Xtables targets
 #
-CONFIG_NETFILTER_XT_TARGET_CHECKSUM=m
-CONFIG_NETFILTER_XT_TARGET_CLASSIFY=y
-CONFIG_NETFILTER_XT_TARGET_CONNMARK=m
-CONFIG_NETFILTER_XT_TARGET_CONNSECMARK=m
-CONFIG_NETFILTER_XT_TARGET_CT=m
-CONFIG_NETFILTER_XT_TARGET_DSCP=m
-CONFIG_NETFILTER_XT_TARGET_HL=m
-CONFIG_NETFILTER_XT_TARGET_HMARK=m
-CONFIG_NETFILTER_XT_TARGET_IDLETIMER=m
-CONFIG_NETFILTER_XT_TARGET_LED=m
-CONFIG_NETFILTER_XT_TARGET_LOG=m
-CONFIG_NETFILTER_XT_TARGET_MARK=m
-CONFIG_NETFILTER_XT_NAT=y
-CONFIG_NETFILTER_XT_TARGET_NETMAP=m
-CONFIG_NETFILTER_XT_TARGET_NFLOG=m
-CONFIG_NETFILTER_XT_TARGET_NFQUEUE=m
-# CONFIG_NETFILTER_XT_TARGET_NOTRACK is not set
-CONFIG_NETFILTER_XT_TARGET_RATEEST=m
-CONFIG_NETFILTER_XT_TARGET_REDIRECT=m
-CONFIG_NETFILTER_XT_TARGET_TEE=m
-CONFIG_NETFILTER_XT_TARGET_TPROXY=m
-# CONFIG_NETFILTER_XT_TARGET_TRACE is not set
-CONFIG_NETFILTER_XT_TARGET_SECMARK=m
-CONFIG_NETFILTER_XT_TARGET_TCPMSS=m
-CONFIG_NETFILTER_XT_TARGET_TCPOPTSTRIP=m
+# CONFIG_NETFILTER_XT_TARGET_CHECKSUM is not set
+# CONFIG_NETFILTER_XT_TARGET_CLASSIFY is not set
+# CONFIG_NETFILTER_XT_TARGET_CONNMARK is not set
+# CONFIG_NETFILTER_XT_TARGET_DSCP is not set
+# CONFIG_NETFILTER_XT_TARGET_HL is not set
+# CONFIG_NETFILTER_XT_TARGET_HMARK is not set
+# CONFIG_NETFILTER_XT_TARGET_IDLETIMER is not set
+# CONFIG_NETFILTER_XT_TARGET_LED is not set
+# CONFIG_NETFILTER_XT_TARGET_LOG is not set
+# CONFIG_NETFILTER_XT_TARGET_MARK is not set
+CONFIG_NETFILTER_XT_NAT=m
+# CONFIG_NETFILTER_XT_TARGET_NETMAP is not set
+# CONFIG_NETFILTER_XT_TARGET_NFLOG is not set
+# CONFIG_NETFILTER_XT_TARGET_NFQUEUE is not set
+# CONFIG_NETFILTER_XT_TARGET_RATEEST is not set
+# CONFIG_NETFILTER_XT_TARGET_REDIRECT is not set
+# CONFIG_NETFILTER_XT_TARGET_TEE is not set
+# CONFIG_NETFILTER_XT_TARGET_TPROXY is not set
+# CONFIG_NETFILTER_XT_TARGET_TCPMSS is not set
+# CONFIG_NETFILTER_XT_TARGET_TCPOPTSTRIP is not set
 
 #
 # Xtables matches
@@ -1106,7 +1099,7 @@ CONFIG_BLK_DEV_RAM_SIZE=4096
 #
 # Misc devices
 #
-# CONFIG_ROCKCHIP_SCR is not set
+CONFIG_ROCKCHIP_SCR=y
 # CONFIG_SENSORS_LIS3LV02D is not set
 # CONFIG_AD525X_DPOT is not set
 # CONFIG_DUMMY_IRQ is not set
@@ -1337,7 +1330,7 @@ CONFIG_PHYLIB=y
 # CONFIG_CICADA_PHY is not set
 # CONFIG_VITESSE_PHY is not set
 # CONFIG_TERANETICS_PHY is not set
-# CONFIG_ROCKCHIP_PHY is not set
+CONFIG_ROCKCHIP_PHY=y
 # CONFIG_SMSC_PHY is not set
 # CONFIG_BROADCOM_PHY is not set
 # CONFIG_BCM7XXX_PHY is not set
@@ -2158,7 +2151,7 @@ CONFIG_WATCHDOG=y
 #
 # Watchdog Device Drivers
 #
-CONFIG_SOFT_WATCHDOG=m
+# CONFIG_SOFT_WATCHDOG is not set
 # CONFIG_GPIO_WATCHDOG is not set
 # CONFIG_XILINX_WATCHDOG is not set
 # CONFIG_ARM_SP805_WATCHDOG is not set
@@ -2324,6 +2317,7 @@ CONFIG_REGULATOR_RK808=y
 CONFIG_REGULATOR_TPS6586X=y
 # CONFIG_REGULATOR_XZ3216 is not set
 CONFIG_CEC_CORE=y
+CONFIG_CEC_NOTIFIER=y
 CONFIG_MEDIA_SUPPORT=y
 
 #
@@ -2432,7 +2426,7 @@ CONFIG_ROCKCHIP_DW_MIPI_DSI=y
 CONFIG_ROCKCHIP_ANALOGIX_DP=y
 CONFIG_ROCKCHIP_INNO_HDMI=y
 CONFIG_ROCKCHIP_LVDS=y
-# CONFIG_ROCKCHIP_DRM_TVE is not set
+CONFIG_ROCKCHIP_DRM_TVE=y
 # CONFIG_ROCKCHIP_RGB is not set
 # CONFIG_ROCKCHIP_DRM_BACKLIGHT is not set
 # CONFIG_ROCKCHIP_RK3066_HDMI is not set
@@ -2464,12 +2458,12 @@ CONFIG_DRM_ANALOGIX_DP=y
 CONFIG_DRM_DW_HDMI=y
 # CONFIG_DRM_DW_HDMI_AHB_AUDIO is not set
 CONFIG_DRM_DW_HDMI_I2S_AUDIO=y
-# CONFIG_DRM_DW_HDMI_CEC is not set
+CONFIG_DRM_DW_HDMI_CEC=y
 # CONFIG_DRM_STI is not set
 # CONFIG_POWERVR_ROGUE_M is not set
 # CONFIG_MALI400 is not set
 CONFIG_MALI_DEVFREQ=y
-CONFIG_MALI_MIDGARD=y
+CONFIG_MALI_MIDGARD=m
 # CONFIG_MALI_GATOR_SUPPORT is not set
 # CONFIG_MALI_MIDGARD_ENABLE_TRACE is not set
 # CONFIG_MALI_DMA_FENCE is not set
@@ -2508,7 +2502,6 @@ CONFIG_FB_SYS_COPYAREA=y
 CONFIG_FB_SYS_IMAGEBLIT=y
 # CONFIG_FB_FOREIGN_ENDIAN is not set
 CONFIG_FB_SYS_FOPS=y
-# CONFIG_FB_DEFERRED_IO is not set
 # CONFIG_FB_SVGALIB is not set
 # CONFIG_FB_MACMODES is not set
 # CONFIG_FB_BACKLIGHT is not set
@@ -2587,7 +2580,8 @@ CONFIG_RK_VCODEC=y
 #
 # ROCKCHIP_MPP
 #
-# CONFIG_ROCKCHIP_MPP_SERVICE is not set
+CONFIG_ROCKCHIP_MPP_SERVICE=y
+CONFIG_ROCKCHIP_MPP_DEVICE=y
 # CONFIG_VGASTATE is not set
 CONFIG_VIDEOMODE_HELPERS=y
 CONFIG_HDMI=y
@@ -2802,94 +2796,82 @@ CONFIG_HID_GENERIC=y
 #
 # Special HID drivers
 #
-CONFIG_HID_A4TECH=m
-# CONFIG_HID_ACCUTOUCH is not set
-CONFIG_HID_ACRUX=m
-CONFIG_HID_ACRUX_FF=y
-# CONFIG_HID_APPLE is not set
+CONFIG_HID_A4TECH=y
+# CONFIG_HID_ACRUX is not set
+CONFIG_HID_APPLE=y
 # CONFIG_HID_APPLEIR is not set
-CONFIG_HID_ASUS=m
-CONFIG_HID_AUREAL=m
-# CONFIG_HID_BELKIN is not set
-CONFIG_HID_BETOP_FF=m
-# CONFIG_HID_CHERRY is not set
-# CONFIG_HID_CHICONY is not set
+CONFIG_HID_AUREAL=y
+CONFIG_HID_BELKIN=y
+# CONFIG_HID_BETOP_FF is not set
+CONFIG_HID_CHERRY=y
+CONFIG_HID_CHICONY=y
 # CONFIG_HID_CORSAIR is not set
 # CONFIG_HID_PRODIKEYS is not set
-# CONFIG_HID_CMEDIA is not set
 # CONFIG_HID_CP2112 is not set
-# CONFIG_HID_CYPRESS is not set
+CONFIG_HID_CYPRESS=y
 CONFIG_HID_DRAGONRISE=m
 CONFIG_DRAGONRISE_FF=y
-CONFIG_HID_EMS_FF=m
-CONFIG_HID_ELECOM=m
+# CONFIG_HID_EMS_FF is not set
+# CONFIG_HID_ELECOM is not set
 # CONFIG_HID_ELO is not set
 CONFIG_HID_EZKEY=y
-CONFIG_HID_GEMBIRD=y
+# CONFIG_HID_GEMBIRD is not set
 # CONFIG_HID_GFRM is not set
-CONFIG_HID_HOLTEK=y
-CONFIG_HOLTEK_FF=y
+# CONFIG_HID_HOLTEK is not set
 # CONFIG_HID_GT683R is not set
-CONFIG_HID_KEYTOUCH=y
+# CONFIG_HID_KEYTOUCH is not set
 CONFIG_HID_KYE=y
-CONFIG_HID_UCLOGIC=y
-CONFIG_HID_WALTOP=y
-# CONFIG_HID_GYRATION is not set
-CONFIG_HID_ICADE=y
-CONFIG_HID_ITE=y
-# CONFIG_HID_TWINHAN is not set
+# CONFIG_HID_UCLOGIC is not set
+# CONFIG_HID_WALTOP is not set
+CONFIG_HID_GYRATION=y
+# CONFIG_HID_ICADE is not set
+CONFIG_HID_TWINHAN=y
 CONFIG_HID_KENSINGTON=y
-# CONFIG_HID_LCPOWER is not set
-CONFIG_HID_LED=y
-# CONFIG_HID_LENOVO is not set
+CONFIG_HID_LCPOWER=y
+CONFIG_HID_LENOVO=y
 CONFIG_HID_LOGITECH=y
-# CONFIG_HID_LOGITECH_DJ is not set
+CONFIG_HID_LOGITECH_DJ=y
 CONFIG_HID_LOGITECH_HIDPP=y
 CONFIG_LOGITECH_FF=y
 CONFIG_LOGIRUMBLEPAD2_FF=y
 CONFIG_LOGIG940_FF=y
 CONFIG_LOGIWHEELS_FF=y
 # CONFIG_HID_MAGICMOUSE is not set
-CONFIG_HID_MAYFLASH=y
 CONFIG_HID_MICROSOFT=y
-# CONFIG_HID_MONTEREY is not set
-CONFIG_HID_MULTITOUCH=y
-CONFIG_HID_NTI=y
+CONFIG_HID_MONTEREY=y
+CONFIG_HID_MULTITOUCH=m
 # CONFIG_HID_NTRIG is not set
 CONFIG_HID_ORTEK=y
 CONFIG_HID_PANTHERLORD=y
 CONFIG_PANTHERLORD_FF=y
-# CONFIG_HID_PENMOUNT is not set
-# CONFIG_HID_PETALYNX is not set
+CONFIG_HID_PENMOUNT=y
+CONFIG_HID_PETALYNX=y
 # CONFIG_HID_PICOLCD is not set
-CONFIG_HID_PLANTRONICS=y
-CONFIG_HID_PRIMAX=y
-CONFIG_HID_RETRODE=y
-CONFIG_HID_ROCCAT=y
-CONFIG_HID_SAITEK=y
-# CONFIG_HID_SAMSUNG is not set
+# CONFIG_HID_PLANTRONICS is not set
+# CONFIG_HID_PRIMAX is not set
+# CONFIG_HID_ROCCAT is not set
+# CONFIG_HID_SAITEK is not set
+CONFIG_HID_SAMSUNG=y
 CONFIG_HID_SONY=y
 CONFIG_SONY_FF=y
 # CONFIG_HID_SPEEDLINK is not set
-CONFIG_HID_STEELSERIES=y
-# CONFIG_HID_SUNPLUS is not set
-# CONFIG_HID_RMI is not set
-CONFIG_HID_GREENASIA=y
+# CONFIG_HID_STEELSERIES is not set
+CONFIG_HID_SUNPLUS=y
+CONFIG_HID_RMI=y
+CONFIG_HID_GREENASIA=m
 CONFIG_GREENASIA_FF=y
-CONFIG_HID_SMARTJOYPLUS=y
+CONFIG_HID_SMARTJOYPLUS=m
 CONFIG_SMARTJOYPLUS_FF=y
-# CONFIG_HID_TIVO is not set
-# CONFIG_HID_TOPSEED is not set
+CONFIG_HID_TIVO=y
+CONFIG_HID_TOPSEED=y
 # CONFIG_HID_THINGM is not set
-CONFIG_HID_THRUSTMASTER=y
-CONFIG_THRUSTMASTER_FF=y
-# CONFIG_HID_UDRAW_PS3 is not set
+# CONFIG_HID_THRUSTMASTER is not set
 # CONFIG_HID_WACOM is not set
-CONFIG_HID_WIIMOTE=y
+CONFIG_HID_WIIMOTE=m
 CONFIG_HID_XINMO=y
 CONFIG_HID_ZEROPLUS=y
 CONFIG_ZEROPLUS_FF=y
-# CONFIG_HID_ZYDACRON is not set
+CONFIG_HID_ZYDACRON=y
 # CONFIG_HID_SENSOR_HUB is not set
 # CONFIG_HID_RKVR is not set
 # CONFIG_HID_ALPS is not set
@@ -3619,7 +3601,8 @@ CONFIG_ROCKCHIP_CPUINFO=y
 # CONFIG_ROCKCHIP_PM_TEST is not set
 CONFIG_ROCKCHIP_GRF=y
 CONFIG_ROCKCHIP_PM_DOMAINS=y
-# CONFIG_ROCKCHIP_PVTM is not set
+CONFIG_ROCKCHIP_PVTM=y
+CONFIG_ROCKCHIP_SUSPEND_MODE=y
 # CONFIG_SUNXI_SRAM is not set
 # CONFIG_SOC_TI is not set
 CONFIG_PM_DEVFREQ=y
@@ -3635,7 +3618,7 @@ CONFIG_DEVFREQ_GOV_USERSPACE=y
 #
 # DEVFREQ Drivers
 #
-# CONFIG_ARM_ROCKCHIP_BUS_DEVFREQ is not set
+CONFIG_ARM_ROCKCHIP_BUS_DEVFREQ=y
 CONFIG_ARM_ROCKCHIP_DMC_DEVFREQ=y
 CONFIG_PM_DEVFREQ_EVENT=y
 CONFIG_DEVFREQ_EVENT_ROCKCHIP_DFI=y
@@ -3881,7 +3864,7 @@ CONFIG_GENERIC_PHY=y
 CONFIG_PHY_ROCKCHIP_USB=y
 # CONFIG_PHY_ROCKCHIP_INNO_USB2 is not set
 # CONFIG_PHY_ROCKCHIP_INNO_USB3 is not set
-# CONFIG_PHY_ROCKCHIP_EMMC is not set
+CONFIG_PHY_ROCKCHIP_EMMC=y
 CONFIG_PHY_ROCKCHIP_DP=y
 # CONFIG_PHY_ROCKCHIP_INNO_MIPI_DPHY is not set
 # CONFIG_PHY_ROCKCHIP_INNO_HDMI_PHY is not set
@@ -3925,7 +3908,7 @@ CONFIG_ROCKCHIP_OTP=y
 #
 # CONFIG_FIRMWARE_MEMMAP is not set
 CONFIG_HAVE_ARM_SMCCC=y
-# CONFIG_ROCKCHIP_SIP is not set
+CONFIG_ROCKCHIP_SIP=y
 
 #
 # File systems
@@ -4023,6 +4006,7 @@ CONFIG_PROC_FS=y
 CONFIG_PROC_SYSCTL=y
 CONFIG_PROC_PAGE_MONITOR=y
 # CONFIG_PROC_CHILDREN is not set
+CONFIG_PROC_UID=y
 CONFIG_KERNFS=y
 CONFIG_SYSFS=y
 CONFIG_TMPFS=y
